# haskell-optimize

./: README.md  optimize.cabal
examples/: Main.hs
src/Numeric/: Optimization.hs
