
name:                optimize
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.1
synopsis:            Algorithms for unconstrained optimization
description:         This package aims to provide a complete set of algorithms
                     for minimizing and maximizing functions without constraints.
                     Derivatives are calculated using the 'ad' library.
license:             BSD3
license-file:        LICENSE
author:              Igor Babuschkin
maintainer:          igor@babuschk.in
copyright:           (c) Igor Babuschkin 2013
category:            Math
build-type:          Simple
extra-source-files:  examples/*.hs
cabal-version:       >=1.10

library
  exposed-modules:   Numeric.Optimization
  -- other-modules:       
  -- other-extensions:    
  build-depends:     base      >=4.6 && <4.7,
                     ad        == 3.*,
                     linear    == 1.*
  hs-source-dirs:    src
  default-language:  Haskell2010
  
